# pizzapicker-slackbot

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
config/: pizza.json  pizzas.json  roulette.json
src/: healthcheck.rs  main.rs  roulette.rs  slack.rs  slack_message.rs
