[package]
name = "pizzapicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.28"
tracing-subscriber = "0.3.18"
tungstenite = { version = "0.21.0", features = ["handshake", "native-tls"]}
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand = "0.8.5"
